Fixes non 1.4 compatible use of Integer.valueOf(int) .
git-svn-id: https://svn.apache.org/repos/asf/maven/sandbox/branches/surefire@536211 13f79535-47bb-0310-9956-ffa450edef68